# analytics-engineer-interview

./: .gitignore  CONTRIBUTING.md  Dockerfile  PR.md  README.md  dbt_project.yml  docker-compose.yml  profiles.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: analytics_task.md
.github/workflows/: pipeline.yml
macros/: test_less_than_or_equal.sql  test_positive_value.sql
models/marts/: mart_routes_by_mode.sql  mart_shelter_distribution.sql  schema.yml
models/staging/: schema.yml  stg_bus_shelters.sql  stg_gtfs_agency.sql  stg_gtfs_routes.sql
scripts/: ingest_data.py  ingest_gtfs.py  query_results.py
