[tool.poetry]
name = "analytics-engineer-interview"
version = "0.1.0"
description = "Analytics Engineering technical evaluation project"
authors = ["Jarvus"]

[tool.poetry.dependencies]
python = "^3.9"
dbt-duckdb = "^1.7.1"
pandas = "^2.1.3"
requests = "^2.31.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"
flake8 = "^6.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
